Fixed White Space at top of page, added favicon

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ margin-top:15px;
 }
 
 .introduction h1 {
-    margin-top: 17.5rem;
+    /* margin-top: 17.5rem; (this code in the body was causing large white space at top of page) */
     font-size: 3.125rem;
 }
 
